--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,20 +2,18 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-parcelize'
-//    id 'androidx.compose'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'com.google.gms.google-services'
-   // id 'org.jetbrains.kotlin.plugin.compose'
 }
 
 android {
-    compileSdk 35
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.drmiaji.prayertimes"
         minSdk 26
-        targetSdk 35
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -31,24 +29,26 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '17'
+        jvmTarget = '1.8'
     }
     viewBinding {
         enabled = true
     }
 
     buildFeatures {
-        viewBinding false
-        dataBinding true
+        viewBinding true
         compose true
+    }
+    buildFeatures {
+        dataBinding true
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion '1.5.11'
+        kotlinCompilerExtensionVersion '1.1.1'
     }
     packagingOptions {
         resources {
@@ -59,104 +59,93 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.12.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.11.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
-    implementation 'com.google.android.gms:play-services-location:21.3.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
+
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.android.gms:play-services-location:20.0.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
 
     // coil
-    implementation('io.coil-kt:coil:2.7.0')
+    implementation("io.coil-kt:coil:2.2.1")
 
     // retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.11.0'
-    implementation "com.squareup.retrofit2:converter-gson:2.11.0"
-    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.14'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.6"
 
     // Room
-    implementation "androidx.room:room-runtime:2.6.1"
-    implementation "androidx.room:room-ktx:2.6.1"
+    implementation "androidx.room:room-runtime:2.4.3"
+    implementation "androidx.room:room-ktx:2.4.3"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
-    //noinspection KaptUsageInsteadOfKsp
-    kapt "androidx.room:room-compiler:2.6.1"
+    kapt "androidx.room:room-compiler:2.4.3"
 
     // ktx artifact
-    implementation "androidx.activity:activity-ktx:1.10.1"
-    implementation "androidx.fragment:fragment-ktx:1.8.6"
+    implementation "androidx.activity:activity-ktx:1.6.0"
+    implementation "androidx.fragment:fragment-ktx:1.5.3"
 
     // coroutine
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.10.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
 
     // android lifecycle
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.7.0"
-
-    // kotlinx-metadata-jvm
-    implementation 'org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.8.0' // Add this line
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
 
     //hilt
-    implementation "com.google.dagger:hilt-android:2.51"
-    kapt 'com.google.dagger:hilt-android-compiler:2.51'
-
-    // ViewModel Support for Hilt
-  //  implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0'
-    kapt 'androidx.hilt:hilt-compiler:1.0.0'
-    implementation("androidx.hilt:hilt-navigation-compose:1.2.0")
+    implementation "com.google.dagger:hilt-android:2.41"
+    kapt "com.google.dagger:hilt-android-compiler:2.39.1"
+    implementation("androidx.hilt:hilt-navigation-compose:1.0.0")
 
     // firebase
-    implementation 'com.google.firebase:firebase-analytics-ktx:22.3.0'
-    implementation 'com.google.firebase:firebase-firestore:25.1.2'
+    implementation 'com.google.firebase:firebase-analytics-ktx:21.1.1'
+    implementation 'com.google.firebase:firebase-firestore:24.3.1'
 
     // work manager
-    implementation 'androidx.work:work-runtime-ktx:2.10.0'
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
 
     // lottie
-    implementation 'com.airbnb.android:lottie:6.6.3'
-    implementation "com.airbnb.android:lottie-compose:6.6.3"
+    implementation 'com.airbnb.android:lottie:5.2.0'
+    implementation "com.airbnb.android:lottie-compose:5.2.0"
 
     // easy adapter
     implementation 'com.github.derysudrajat:EasyAdapter:2.0.0'
     // recycle view
-    implementation 'androidx.recyclerview:recyclerview:1.4.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
     // skeleton
-    implementation 'com.faltenreich:skeletonlayout:6.0.0'
+    implementation 'com.faltenreich:skeletonlayout:4.0.0'
 
-    implementation 'androidx.compose.ui:ui:1.7.8'
+    implementation 'androidx.compose.ui:ui:1.2.1'
     // Tooling support (Previews, etc.)
-    implementation 'androidx.compose.ui:ui-tooling:1.7.8'
+    implementation 'androidx.compose.ui:ui-tooling:1.2.1'
     // Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
-    implementation 'androidx.compose.foundation:foundation:1.7.8'
+    implementation 'androidx.compose.foundation:foundation:1.2.1'
     // Material Design
-    implementation 'androidx.compose.material:material:1.7.8'
-    implementation 'androidx.compose.material3:material3:1.3.1'
+    implementation 'androidx.compose.material:material:1.2.1'
+    implementation 'androidx.compose.material3:material3:1.0.0-rc01'
     // Material design icons
-    implementation 'androidx.compose.material:material-icons-core:1.7.8'
-    implementation 'androidx.compose.material:material-icons-extended:1.7.8'
-    implementation "androidx.constraintlayout:constraintlayout-compose:1.1.1"
+    implementation 'androidx.compose.material:material-icons-core:1.2.1'
+    implementation 'androidx.compose.material:material-icons-extended:1.2.1'
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.1.0-alpha04"
     // Integration with activities
-    implementation 'androidx.activity:activity-compose:1.10.1'
+    implementation 'androidx.activity:activity-compose:1.6.0'
     // Integration with ViewModels
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
     // Integration with observables
-    implementation 'androidx.compose.runtime:runtime-livedata:1.7.8'
+    implementation 'androidx.compose.runtime:runtime-livedata:1.2.1'
 
-    implementation "androidx.compose.material3:material3-window-size-class:1.3.1"
+    implementation "androidx.compose.material3:material3-window-size-class:1.0.0-rc01"
 
     // UI Tests
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.7.8'
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.2.1'
+
 
     //doa API
     implementation 'com.github.florent37:expansionpanel:1.2.4'
 
-    configurations {
-        configureEach {
-            exclude group: 'com.google.guava', module: 'listenablefuture'
-        }
-    }
 }
