--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,18 @@
 buildscript {
     ext {
-        compose_ui_version = '1.7.8'
-    }
-    repositories {
-        google()
-        mavenCentral()
-        maven { url 'https://maven.pkg.jetbrains.space/public/p/compose/dev' }
+        compose_ui_version = '1.2.1'
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.5.0' // Use the latest version
-        classpath 'com.google.gms:google-services:4.4.1'
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.51'
-      //  classpath 'androidx.compose.compiler:compiler-gradle-plugin:1.5.11'
+        classpath 'com.google.gms:google-services:4.4.2'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '8.5.0' apply false
-    id 'com.android.library' version '8.5.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.9.24' apply false
-    id 'com.google.dagger.hilt.android' version '2.51' apply false
+    id 'com.android.application' version '7.3.0' apply false
+    id 'com.android.library' version '7.3.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'com.google.dagger.hilt.android' version '2.41' apply false
 }
 
-tasks.register('clean', Delete) {
-    delete layout.buildDirectory
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
